created test environment

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, maximum-scale=1.0, user-scalable=no">
-  <title>InstiFusion - AARSI: One Nation, One ID for Students</title>
+  <title>One Nation, One ID for Students | InstiFusion</title>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
@@ -21,14 +21,14 @@
   <meta name="theme-color" content="#395062">
   <meta property="og:title" content="One Nation, One ID for Students | InstiFusion">
   <meta property="og:site_name" content="InstiFusion">
-  <meta property="og:url" content="https://dev-srv.instifusion.com">
-  <meta property="og:description" content="InstiFusion is the privately managed repository of the students academic records and the issuer of the AARSI ID (Accumulated Academic Records and Student Information Identifier).">
+  <meta property="og:url" content="https://test.instifusion.com">
+  <meta property="og:description" content="The Issuer of AARSI ID (Accumulated Academic Records and Student Information Identifier).">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://dev-srv.instifusion.com/assets/instifusion-social-open-graph-1200x630.jpg">
+  <meta property="og:image" content="https://test.instifusion.com/assets/instifusion-social-open-graph-1200x630.jpg">
   <meta property="og:image:width" content="1280">
   <meta property="og:image:height" content="640">
-  <meta name="description" content="InstiFusion is the privately managed repository of the students academic records and the issuer of the AARSI ID (Accumulated Academic Records and Student Information Identifier)." />
-  <meta name="keywords" content="School Management System, One Nation One ID for Students, School ERP, School CRM" />
+  <meta name="description" content="The Issuer of AARSI ID (Accumulated Academic Records and Student Information Identifier)." />
+  <meta name="keywords" content="Central Information System for Schools, AARSI, Accumulated Academic Records and Student Information, School Management System, School ERP" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css">
@@ -51,7 +51,7 @@
   <header>
     <div class="logo">
       <img src="assets/instifusion-logo-text-theme.png" width="264" height="48" alt="logo" class="full">
-      <img src="assets/instifusion-logo-theme.png" width="264" height="48" alt="logo" class="small">
+      <!-- <img src="assets/instifusion-logo-theme.png" width="264" height="48" alt="logo" class="small"> -->
     </div>
     <nav>
       <ul>
@@ -62,7 +62,7 @@
           <a href="#aarsi">AARSI</a>
         </li>
         <li>
-          <a href="#features">features</a>
+          <a href="#ciss">CISS</a>
         </li>
         <li>
           <a href="#contact">contact</a>
@@ -70,7 +70,7 @@
       </ul>
     </nav>
     <div class="actions">
-      <a href="https://portal.dev-srv.instifusion.com/auth/signup">Register Now</a>
+      <a href="https://app.test.instifusion.com/auth/signup">Register</a>
     </div>
   </header>
   <main>
@@ -82,10 +82,9 @@
             <h1>Central Information System for Schools</h1>
             <span>by InstiFusion</span>
           </div>
-          <p>A uniquely designed modern system for management of day to day data and information processing of a school.
-            CISS is fully modular and built from ground up keeping simplicity in mind and minimalism in focus.</p>
+          <p>A uniquely designed modern system for student information and academic records, which is redefining how a students performance, skills and capabilities are measured across the globe. CISS is a windows to a students profile and academic journey.</p>
         </div>
-        <a href="#features" class="button">See Features</a>
+        <a href="#ciss" class="button">See Features</a>
       </div>
       <img src="assets/graphs-statistics_outline.svg" alt="hero" width="784" height="1344" class="section-graphics">
     </section>
@@ -101,7 +100,7 @@
 
     <!-- AARSI SECTION -->
     <section id="aarsi">
-      <img src="assets/aarsi_card_03-squashed.jpg" alt="hero" width="784" height="1344">
+      <img src="assets/aarsi_card_03-squashed.png" alt="hero" width="784" height="1344">
       <div class="section-content center-text">
         <ul>
           <li><a href="https://linkedin.com/showcase/instifusion" target="_blank"><img src="assets/icons/social/linkedin-square.svg" alt="linkedin"></a></li>
@@ -132,8 +131,8 @@
     </section>
 
     <!-- FEATURES SECTION -->
-    <section id="features">
-      <h2 class="center-text">Features</h2>
+    <section id="ciss">
+      <h2 class="center-text">CISS Features</h2>
       <p class="center-text">minimal and simple to operate school management system.</p>
       <div>
 
@@ -148,25 +147,25 @@
             <h4>Core Features</h4>
             <ul>
               <li><i class="fa fa-check"></i> School Overview</li>
-              <li><i class="fa fa-check"></i> Multi-Branch Administration</li>
+              <li><i class="fa fa-check"></i> Multi-Branch (Future)</li>
               <li><i class="fa fa-check"></i> Users and Role Management</li>
               <li><i class="fa fa-check"></i> Standards, Sections and Subject Management</li>
               <li><i class="fa fa-check"></i> Student Onboarding and Admissions (Integration with AARSI)</li>
-              <li><i class="fa fa-check"></i> School Progress Report (Integration with AARSI)</li>
-              <li><i class="fa fa-check"></i> Scheduler and Calendar</li>
-              <li><i class="fa fa-check"></i> Internal and Parent Communication</li>
-              <li><i class="fa fa-check"></i> Fees Management</li>
-              <li>... and many more</li>
+              <li><i class="fa fa-check"></i> Student Assessment and Test Results (Integration with AARSI)</li>
+              <li><i class="fa fa-check"></i> Student Progress Report (Integration with AARSI)</li>
+              <li><i class="fa fa-check"></i> Attendance Tracker</li>
+              <li>... and many more to come</li>
             </ul>
           </div>
           <div>
             <h4>Extended Features (Optional)</h4>
             <ul>
               <li><i class="fa fa-check"></i> Document Repository</li>
-              <li><i class="fa fa-check"></i> Payment Integration</li>
-              <li><i class="fa fa-check"></i> School Store</li>
-              <li><i class="fa fa-check"></i> Library and Asset Management</li>
-              <li>... and many more</li>
+              <li><i class="fa fa-check"></i> Parent Communication &amp; Notification (Future)</li>
+              <li><i class="fa fa-check"></i> Payment Integration (Future)</li>
+              <li><i class="fa fa-check"></i> School eStore with Online Payments (Future)</li>
+              <li><i class="fa fa-check"></i> Library and Asset Management (Future)</li>
+              <li>... and many more to come</li>
             </ul>
           </div>
         </div>
@@ -182,7 +181,7 @@
 
       <div class="section-content">
         <form action="https://formsubmit.co/88fb4e77d060c62035927e49495a8a98" method="POST">
-          <input type="hidden" name="_next" value="https://dev-srv.instifusion.com">
+          <input type="hidden" name="_next" value="https://test.instifusion.com">
           <input type="hidden" name="_subject" value="InstiFusion Form Submission">
           <!-- <input type="hidden" name="_captcha" value="true"> -->
           <div>
@@ -220,7 +219,7 @@
     </section>
   </main>
   <footer>
-    <div>Copyright © 2023, SolScientia Technologies. This site is powered by InstiFusion®.</div>
+    <div>Copyright © 2023, SolScientia Technologies Pvt. Ltd. InstiFusion platform is developed and maintained by SolScientia.</div>
     <div>
       <ul>
         <li><a href="https://linkedin.com/showcase/instifusion" target="_blank"><img src="assets/icons/social/linkedin-square-white.svg" alt="linkedin"></a></li>
