updated contact information and subtitle

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, maximum-scale=1.0, user-scalable=no">
-  <title>One Nation, One ID for Students | InstiFusion</title>
+  <title>Analyzing Academic Achievements | InstiFusion</title>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
@@ -19,7 +19,7 @@
   <meta name="msapplication-TileImage" content="assets/icons/mstile-144x144.png">
   <meta name="msapplication-config" content="browserconfig.xml">
   <meta name="theme-color" content="#395062">
-  <meta property="og:title" content="One Nation, One ID for Students | InstiFusion">
+  <meta property="og:title" content="Analyzing Academic Achievements | InstiFusion">
   <meta property="og:site_name" content="InstiFusion">
   <meta property="og:url" content="https://test.instifusion.com">
   <meta property="og:description" content="The Issuer of AARSI ID (Accumulated Academic Records and Student Information Identifier).">
@@ -204,11 +204,7 @@
         <div>
           <div>
             <h3>Address</h3>
-            <address>WeWork, 78/9 Outer Ring Road, Bellandur, Bengaluru - 560103, Karnataka, India</address>
-          </div>
-          <div>
-            <h3>Phone</h3>
-            <em>+91 7892141248</em>
+            <address>103, Block 19, Cluster B, <br>Suncity Apartments, Ibblur Junction, Outer Ring Road, <br>Bengaluru - 560102,<br>Karnataka, India</address>
           </div>
           <div>
             <h3>Email</h3>
@@ -229,7 +225,6 @@
       </ul>
     </div>
   </footer>
-  <!-- <script src="main.js"></script> -->
 </body>
 
 </html>
